<resources>
    <string name="app_name">24/7 OnlineMart</string>
    <string name="project_heading">24/7 Online Mart</string>
    <string name="signin_heading">SignIn</string>
    <string name="signup_heading">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="not_registered_signup">Not Registered? SignUp!</string>
    <string name="nabeel_14682_gmail_com">nabeel.14682@gmail.com</string>
    <string name="already_registered_signin">Already Registered? SignIn!</string>
    <string name="cnic">Cnic</string>
    <string name="_42501">42501########</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="_0301">0301#######</string>
    <string name="phone_number">Phone Number</string>
    <string name="nabeel14682">nabeel14682</string>
    <string name="username">Username</string>
    <string name="nabeel_14682_iqra_edu_pk">nabeel.14682@iqra.edu.pk</string>
    <string name="email">Email</string>
    <string name="homepage">HOME PAGE</string>
    <string name="top_deals">*Top Deals*</string>
    <string name="top_sales">*Top Sales*</string>
    <string name="category">*Category*</string>
    <string name="welcome_username">Welcome Username</string>
    <string name="registered_mark">24/7 Online Mart ®</string>
    <string name="home_page">Home Page</string>
    <string name="categories_navbar">Categories</string>
    <string name="items_navbar">Items</string>
    <string name="my_cart__navbar">My Cart</string>
    <string name="my_orders_navbar">My Orders</string>
    <string name="account_settings_navbar">Account Settings</string>
    <string name="my_e_wallet_navbar">My E-Wallet</string>
    <string name="about_us_navbar">About Us</string>
    <string name="logout_out_navbar">Logout</string>
    <string name="add_image_navbar">Add Image</string>
    <string name="txt_home_topDeals_1">Pixel 4a</string>
    <string name="txt_home_topDeals_2">Pixel 4a</string>
    <string name="txt_home_topDeals_3">Pixel 4a</string>
    <string name="txt_home_topSales_1">Baseus Usb Cable</string>
    <string name="txt_home_topSales_2">Baseus Usb Cable</string>
    <string name="txt_home_topSales_3">Baseus Usb Cable</string>
    <string name="txt_home_Cat_1">Health</string>
    <string name="txt_home_Cat_2">Apparel</string>
    <string name="txt_home_Cat_3">Phone Accessories</string>
    <string name="txt_home_Cat_4">Stationary</string>
    <string name="txt_home_Cat_5">Food Items</string>
    <string name="txt_home_Cat_6">Electronics</string>
    <string name="txt_home_Cat_7">Books</string>
    <string name="txt_home_Cat_8">Coming Soon</string>
    <string name="txt_home_Cat_9">Coming Soon</string>
    <string name="txt_aboutus">About</string>
    <string name="txt_about_this">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere lorem ipsum dolor sit amet consectetur adipiscing elit. Tellus id interdum velit laoreet id donec ultrices tincidunt arcu. </string>
    <string name="txt_heading_about">About Us</string>
    <string name="txt_total_cart">Total</string>
    <string name="txt_Placeorder_cart">Place Order</string>
    <string name="txt_clear_cart">Clear Cart</string>
    <string name="txt_amount_cart">Amount</string>
    <string name="txt_image_item_list">Image</string>
    <string name="txt_name_item_list">Name</string>
    <string name="txt_price_item_list">Price</string>
    <string name="txt_quantity_item_list">Quantity</string>
    <string name="txt_sub_total_item_list">Sub Total</string>
    <string name="txtusername_menu_header">Username</string>
    <string name="txt_items_nav_menu">Categories</string>
    <string name="txt_my_cart_nav_menu">My Cart</string>
    <string name="txt_my_order_nav_menu">My Order</string>
    <string name="txt_acc_sett_nav_menu">Account Setting</string>
    <string name="txt_ewallet_nav_menu">My E-Wallet</string>
    <string name="txt_about_us_nav_menu">About Us</string>
    <string name="btn_logout_nav_menu">Logout</string>
    <string name="txtmenubar_menutoolbar">menubar</string>
    <string name="txtstatus_item_list">Status</string>
    <string name="txte_wallet">E-WALLET</string>
    <string name="txthome_contentdis_icon">Home</string>
    <string name="txt_e_wallet_pts">0</string>
    <string name="txt_remaining_pts">Total Remaining Coins</string>
    <string name="txt_pts">pts</string>
    <string name="txtcategories_cat_page">Categories</string>
    <string name="txthealth_cont">Health</string>
    <string name="txtapparel_catpage">Apparel</string>
    <string name="txtstationary_catpage">Stationary</string>
    <string name="txtfooditems_catpage">FoodItems</string>
    <string name="txtbooks_catpage">Books</string>
    <string name="txtelectronics_catpage">Electronics</string>
    <string name="txtcheckout_chkout">CHECKOUT</string>
    <string name="txttotal_items_chkout">Total Items</string>
    <string name="txttotal_amount_chkout">Total Amount</string>
    <string name="txtdel_dates_chkout">Delivery Dates</string>
    <string name="txtpay_meth_chkout">Payment Method</string>
    <string name="txtorder_chkout">Order</string>
    <string name="txtblank">blank</string>
    <string name="txtacc_setting_acc_page">Account Setting</string>
    <string name="txtedit_accset">Edit</string>
    <string name="txtsave_accset">save</string>
    <string name="hintaddress_accset">Gulistan e jauhar</string>
    <string name="hintcountry_accset">Pakistan</string>
    <string name="hintcity_accset">Karachi</string>
    <string name="txtaddress_accset">Address</string>
    <string name="txtcountry_accset">Country</string>
    <string name="txtcity_accset">City</string>
</resources>