<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Main_Bg_Color"
    >

    <TextView
        android:id="@+id/textView2"
        style="@style/SignIn_SignUp_TextView"
        android:text="@string/signin_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signin_email_textView"
        style="@style/SignIn_TextView"
        android:text="@string/email"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/ed_signin_Email"
        style="@style/SignIn_EditText"
        android:autofillHints=""
        android:hint="@string/nabeel_14682_gmail_com"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/signin_email_textView"
        app:layout_constraintTop_toBottomOf="@+id/signin_email_textView" />

    <TextView
        android:id="@+id/textView4"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/ed_signin_Email"
        app:layout_constraintTop_toBottomOf="@+id/ed_signin_Email"
        style="@style/SignIn_TextView"
        />

    <EditText
        android:id="@+id/ed_signin_Password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        style="@style/SignIn_EditText"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnsignin"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="@+id/ed_signin_Password"
        app:layout_constraintStart_toStartOf="@+id/ed_signin_Password"
        app:layout_constraintTop_toBottomOf="@+id/ed_signin_Password"
        style="@style/btn_SignIn_SignUp"
        />

    <Button
        android:id="@+id/btnNotRegistered"
        style="@style/btn_NotRegis_Regis"
        android:text="@string/not_registered_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsignin" />

</androidx.constraintlayout.widget.ConstraintLayout>