<RelativeLayout
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/Main_Bg_Color"
    >

    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196f3"
        android:padding="5dp"
        android:weightSum="2"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_total_cart"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_amount_cart"
            android:textSize="20sp"
            android:gravity="center"
            />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_above="@+id/btn_placeorder"
        android:layout_below="@+id/layout_total"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/btn_placeorder"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="229dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        android:text="@string/txt_Placeorder_cart"
        android:textColor="@android:color/white"
        android:theme="@style/Theme.MaterialButton" />

    <Button
        android:id="@+id/btn_clearcart"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="229dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="#FF0000"
        android:text="@string/txt_clear_cart"
        android:textColor="@android:color/white"
        android:theme="@style/Theme.MaterialButton" />

</RelativeLayout>